--- a/TicTacToe/tictactoe.html
+++ b/TicTacToe/tictactoe.html
@@ -35,8 +35,8 @@
       
     </a>
     <nav>
-      <a href="Pages/contact.html">Contact</a>
-      <a href="Pages/privacypolicy.html">Privacy Policy</a>
+      <a href="../Pages/contact.html">Contact</a>
+      <a href="../Pages/privacypolicy.html">Privacy Policy</a>
     </nav>
   </header>
   <div class="container">
