--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
   <div class="container">
     <h1> Mini Game Collection</h1>
     <div class="content">
-      <a href="/Rock Paper Sissor/rps.html">
+      <a href="/Rock Paper Sissor/index.html">
       <div class="game-card">
         <img src="/Rock Paper Sissor/icon.jpg" alt="">
         <p>Rock Paper Scissor</p>
       </div>
       </a>
-      <a href="/Number guessing/numberguessing.html">
+      <a href="/Number guessing/index.html">
       <div class="game-card">
         <img src="/Number guessing/guessing.png" alt="">
         <p>Number guessing Game</p>
       </div>
       </a>
-      <a href="/TicTacToe/tictactoe.html">
+      <a href="/TicTacToe/index.html">
       <div class="game-card">
         <img src="TicTacToe/tictactoe.png" alt="">
         <p>Tic Tac Toe</p>
