--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
 <body>
   <header>
     <nav>
-      <a href="Pages/contact.html">Contact</a>
-      <a href="Pages/privacypolicy.html">Privacy Policy</a>
+      <a href="contact.html">Contact</a>
+      <a href="privacypolicy.html">Privacy Policy</a>
     </nav>
   </header>
   <div class="container">
     <h1> Mini Game Collection</h1>
     <div class="content">
-      <a href="/Rock Paper Sissor/index.html">
+      <a href="https://diwashpandey164.github.io/RockPaperScissor/">
       <div class="game-card">
-        <img src="/Rock Paper Sissor/icon.jpg" alt="">
+        <img src="icon.jpg" alt="">
         <p>Rock Paper Scissor</p>
       </div>
       </a>
-      <a href="/Number guessing/index.html">
+      <a href="https://diwashpandey164.github.io/GuessingGame/">
       <div class="game-card">
-        <img src="/Number guessing/guessing.png" alt="">
+        <img src="guessing.png" alt="">
         <p>Number guessing Game</p>
       </div>
       </a>
-      <a href="/TicTacToe/index.html">
+      <a href="https://diwashpandey164.github.io/TicTacToe/">
       <div class="game-card">
-        <img src="TicTacToe/tictactoe.png" alt="">
+        <img src="tictactoe.png" alt="">
         <p>Tic Tac Toe</p>
       </div>
       </a>
       <a href="#">
       <div class="game-card">
-        <img src="/Comming soon/gameicon.png" alt="">
+        <img src="gameicon.png" alt="">
         <p>Comming soon...</p>
       </div>
       </a>
